--- a/style.css
+++ b/style.css
@@ -1,50 +1,69 @@
 @font-face {
-	font-family: silkscreen;
-	src: url('slkscr.ttf');
+    font-family: silkscreen;
+    src: url("slkscr.ttf");
 }
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-	background-color: #292929;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-	font-family: silkscreen;
+    background-color: #292929;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: silkscreen;
 }
 canvas {
-	background-color: #a8ba44;
-	image-rendering: -moz-crisp-edges;
-	image-rendering: -webkit-crisp-edges;
-	image-rendering: pixelated;
-	image-rendering: crisp-edges;
-	background-image: url('bg.png');
-	background-size: cover;
-	border-radius: 5px;
-	margin-bottom: 2rem;
-	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    background-color: #a8ba44;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-crisp-edges;
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;
+    background-image: url("bg.png");
+    background-size: cover;
+    border-radius: 5px;
+    margin-bottom: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+        rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 img {
-	image-rendering: pixelated;
-	image-rendering: -moz-crisp-edges;
-	image-rendering: crisp-edges;
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: crisp-edges;
 }
 
 .coin-img {
-	height: 30px;
-	width: 30px;
+    height: 30px;
+    width: 30px;
 }
 
 .coins p {
-	font-size: 2.5rem;
-	margin-left: 0.5rem;
+    font-size: 2.5rem;
+    margin-left: 0.5rem;
 }
 #room-notify,
 #message-value {
-	min-height: 30px;
+    min-height: 30px;
+}
+
+.controls {
+    line-height: 14px;
+    position: absolute;
+    color: #fff;
+    top: 0;
+    left: 0;
+    padding: 25px;
+}
+
+.values {
+    line-height: 14px;
+    position: absolute;
+    color: #fff;
+    bottom: 0;
+    left: 0;
+    padding: 25px;
 }
